# Ray-Tracer

./: CMakeLists.txt  main_lab2.cpp  main_lab34.cpp
Core/: material.h  material_colour.h  scene.cpp  scene.h  vertex.h
Lights/: area_light.cpp  area_light.h  directional_light.cpp
Materials/: global_material.cpp  global_material.h  phong_material.cpp  phong_material.h
Objects/: polymesh_object.h  quadratic_object.cpp  quadratic_object.h
